# pictonode

./: .eslintrc.js  .gitignore  Dockerfile  Gulpfile.js  README.md  package-lock.json  package.json  pictonodediagram  tsconfig.json
gimp/pictonode-gimp-plugin/: CMakeLists.txt  README.md
gimp/pictonode-gimp-plugin/GIMP 2.99/: README.md
gimp/pictonode-gimp-plugin/GIMP 2.99/pictonode/: about.py  client.py  custom_nodes.py  httpclient.py  iconview.py  json_generator.py  json_interpreter.py  login_window.py  manager.py  node_parser.py  pictonode.py  toolbar.py  user.py  user_json_example.txt  utils.py  window.py
gimp/pictonode-gimp-plugin/GIMP 2.99/pictonode/ontario/: __init__.py
gimp/pictonode-gimp-plugin/GIMP 2.99/sandbox/: gegl_invert.py  gimp_sandbox.py  pictoflow_test.py  plugin_ui.py  plugin_ui_sandbox.py  print_giapi.py
gimp/pictonode-gimp-plugin/GIMP 2.99/sandbox/apis/: Atk_1.0  Babl_0.1  GObject_2.0  GdkPixbuf_2.0  Gdk_3.0  Gegl_0.4  Gio_2.0  Gtk_3.0  HarfBuzz_0.0  (+3 more)
gimp/pictonode-gimp-plugin/GIMP 2.99/tests/: controller_reception_test.py  gegl_buffer_test.py  json_generation_test.py  setup_json_test.sh
gimp/pictonode-gimp-plugin/GIMP-2.99/: README.md
gimp/pictonode-gimp-plugin/GIMP-2.99/pictonode/: json_generator.py  json_interpreter.py  pictonode.py  toolbar.py  utils.py  window.py
gimp/pictonode-gimp-plugin/GIMP-2.99/sandbox/: .gitignore  gegl_invert.py  plugin_ui_sandbox.py  print_giapi.py
gimp/pictonode-gimp-plugin/GIMP-2.99/tests/: controller_reception_test.py  setup_json_test.sh  toolbar_test.py
gimp/pictonode-gimp-plugin/src/: plugin.cpp
(+152 files in other folders)
